// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StoreInfoForm > should match the snapshot 1`] = `
<section
  class="store-info-section"
>
  <h2>
    Store Information
  </h2>
  <fieldset
    class="form-group"
  >
    <label
      for="storeName"
    >
      Store Name
    </label>
    <input
      id="storeName"
      placeholder="Enter your store name"
      required=""
      type="text"
      value="Snapshot Store"
    />
  </fieldset>
</section>
`;

exports[`StoreInfoForm > should match the snapshot when submitting 1`] = `
<section
  class="store-info-section"
>
  <h2>
    Store Information
  </h2>
  <fieldset
    class="form-group"
  >
    <label
      for="storeName"
    >
      Store Name
    </label>
    <input
      disabled=""
      id="storeName"
      placeholder="Enter your store name"
      required=""
      type="text"
      value="Submitting Store"
    />
  </fieldset>
</section>
`;
